--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header {
 }
 
 .container {
-  max-width: 900px;
+  max-width: 1200px;
   margin: auto;
 }
 
@@ -32,7 +32,7 @@ header {
   display: flex;
   flex-wrap: wrap;
   min-height: 500px;
-  max-width: 1000px;
+  max-width: 1200px;
   display: flex;
 }
 
@@ -45,6 +45,8 @@ header {
 h2 {
   text-align: center;
   padding: 1rem 0;
+  background-color: black;
+  color: blanchedalmond;
 }
 
 img {
